@@ -5,6 +5,7 @@
 * Added `normalizer` argument to `casefold` function.
 * Added `new_id` function.
 * Deprecated `next_id` function in favor of `new_id`.
+* Added `identity` and `has_identity` functions.
 
 2.4.0
 * Handle HTTP errors 502 and 504 as `Fauna::UnavailableError`.
